delete and change category add to swagger also change category res
